fix search for "find friends" page to use fuzzy searching